@@ -8,6 +8,7 @@ Version 0.8.1 (ongoing):
 	much better HilbertArray.relabel method
 	HilbertArray.trace between arbitrary spaces
 	HilbertArray.sqrt
+	TensorBasis module
 
 Version 0.8 (2011-12-01):
 	as_np_matrix take {row,col}_space args
